# facebook-sdk-rs

./: Cargo.toml  README.md
examples/: scratch.rs
src/: lib.rs
src/api/: mod.rs  models.rs
src/api/conversation/: api.rs  mod.rs  models.rs
src/api/message/: api.rs  mod.rs  models.rs  schemas.rs
src/api/page/: api.rs  mod.rs  models.rs
src/api/post/: api.rs  mod.rs  models.rs  operations.rs
src/api/user/: api.rs  mod.rs  models.rs
src/api/webhook/: api.rs  events.rs  mod.rs  models.rs
src/auth/: client.rs  errors.rs  mod.rs  models.rs  schemas.rs
src/graph/: client.rs  errors.rs  mod.rs  models.rs  schemas.rs
