[package]
name = "facebook-sdk-rs"
version = "0.1.7"
edition = "2024"
description = "Rust SDK for the Facebook Graph API and Messenger Platform"
homepage = "https://github.com/NovaH00/facebook-sdk-rs"
repository = "https://github.com/NovaH00/facebook-sdk-rs"
license = "MIT"
keywords = ["facebook", "graph-api", "messenger", "meta", "social"]
categories = ["api-bindings", "web-programming"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
url = "2.5.8"
utoipa = { version = "5.5.0", default-features = false, features = ["macros", "chrono"], optional = true }

[features]
utoipa = ["dep:utoipa"]
